# cv-epam-course

./: .gitignore  README.md
Module 1. Image processing/: README.md  pose_estimation.ipynb
Module 2. Image classification/: README.md  classic_features.ipynb
Module 3. Object detection/: README.md
Module 3. Object detection/jobs/vertex_train_yolov5/: setup.py
Module 3. Object detection/jobs/vertex_train_yolov5/trainer/: cfgs.py  task.py
Module 3. Object detection/jobs/vertex_train_yolox/: setup.py
Module 3. Object detection/jobs/vertex_train_yolox/trainer/: task.py  yolox_small_8x8_300e_coco.py
Module 3. Object detection/results/yolov5/: events.out.tfevents.1645013837.2bc0cc0cc605.218.0
Module 3. Object detection/results/yolov5/test_inference/: zvz_452.tiff  zvz_453.tiff  zvz_454.tiff  zvz_455.tiff  zvz_456.tiff  zvz_457.tiff  zvz_458.tiff  zvz_459.tiff  zvz_460.tiff  zvz_461.tiff  zvz_462.tiff  zvz_463.tiff  zvz_464.tiff  zvz_465.tiff  zvz_466.tiff  zvz_467.tiff  zvz_623.tiff  zvz_624.tiff  zvz_625.tiff  zvz_626.tiff  zvz_627.tiff  zvz_628.tiff  zvz_629.tiff  zvz_630.tiff  zvz_631.tiff  zvz_632.tiff  zvz_633.tiff  (+5 more)
Module 3. Object detection/script/: main.py
Module 4. Segmentation/: README.MD
Module 4. Segmentation/jobs/bars_test/: README.MD
Module 4. Segmentation/jobs/vertex_train_barcode_segmentation/: setup.py
Module 4. Segmentation/jobs/vertex_train_bars_segmentation/: setup.py
Module 4. Segmentation/results/bars/: blobs_df_test.csv
Module 4. Segmentation/script/: main.py
Module 5. Metric learning/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  dvc.yaml  models.dvc  pyproject.toml  requirements.txt  settings.json  setup.py  structure.py
Module 5. Metric learning/.dvc/: config
Module 5. Metric learning/data/: .gitignore  processed.dvc  raw.dvc  results.dvc
Module 5. Metric learning/data/processed/: dataset_part.tar.dvc
Module 5. Metric learning/demo/: README.md  inference.py  main.py  model.py  visualization.py
Module 5. Metric learning/demo/pickles/: data_pathes.csv  mapper_faces.pickle  normalizer.pickle
Module 5. Metric learning/logs/: accuracy.pickle  logs.log.dvc  stderr.txt
Module 5. Metric learning/models/: torchscript.pt.dvc
Module 5. Metric learning/notebooks/: embedder_training.ipynb  milvus.ipynb
Module 5. Metric learning/scripts/: dataset_statistics.py  make_dataset.py  structure.py
Module 5. Metric learning/src/: metric_learning.py  task.py  transformations.py  validation.py
Module 5. Metric learning/src/data/: make_dataset.py
Module 5. Metric learning/src/make_dataset/: dataset_statistics.py  make_dataset.py
Module 5. Metric learning/src/validation/: create_embeddings.py  validation.py
Module 5. Metric learning/trainer_docker/: data.py  loss.py  metric_learning.py  task.py
Module 6. Tracking/: README.md  tracking.ipynb
Module 6. Tracking/notebooks/: tracking.ipynb
Module 7. Model optimization/: README.md  optimization.ipynb
(+46 files in other folders)
