[tool.poetry]
name = "metric-learning"
version = "0.1.0"
description = "Train metric learning model"
authors = ["gordeev.al <aleksandr_gordeev2@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
timm = "0.5.4"
torch = "1.11.0"
torchvision = "0.12.0"
torchmetrics = "0.7.3"
pytorch-lightning = "1.5.10"
pytorch-metric-learning = "1.2.1"
click = "^8.1.2"
tqdm = "^4.64.0"
albumentations = "^1.1.0"
tensorboard = "^2.8.0"
future = "0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
